# query-verse

./: README.md  pyproject.toml  requirements.txt
src/query_gen/: main.py
src/query_gen/crews/poem_crew/: poem_crew.py
src/query_gen/crews/poem_crew/config/: agents.yaml  tasks.yaml
src/query_gen/tools/: custom_tool.py
